shimmer effect for loading and shimmer logic for the list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Nextflix</string>
+    <string name="app_name" translatable="false">Nextflix</string>
 </resources>
