--- a/core_ui/src/main/res/values/strings.xml
+++ b/core_ui/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="movies">Movies</string>
     <string name="tv_shows">TV Shows</string>
     <string name="my_list">My List</string>
+    <string name="network_fetch_problem">Network failed!</string>
 </resources>
